--- a/my-app/.env
+++ b/my-app/.env
@@ -1,1 +1,2 @@
 VITE_REACT_APP_API_KEY=c54196973emshbfbb5c5739494f3p1b9c37jsne5c9b47d84c8
+VITE_REACT_APP_API_KEY2=47ca7487a6msh50ab277f738fe64p182299jsn1d2d1003056b
